--- a/config/database.yml
+++ b/config/database.yml
@@ -10,16 +10,17 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: dev_db
+  adapter: postgresql
+  database: pair_dev_db
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test_db
+  database: pair_test_db
 
 production:
   <<: *default
-  database: test_db
+  database: pair_prod_db
